--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 									experiences provide invaluable insights into the practical applications of the theoretical 
 									concepts we study. They not only help us envision our future in the field but also offer the 
 									opportunity to better prepare ourselves for the dynamic and evolving landscape of technology.</p>
+							</article>
 
 						<!-- Resume -->
 							<article id="resume">
