--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									experiences provide invaluable insights into the practical applications of the theoretical 
 									concepts we study. They not only help us envision our future in the field but also offer the 
 									opportunity to better prepare ourselves for the dynamic and evolving landscape of technology.</p>
-								<h5><a href="https://github.com/Yuylam/semester-1/tree/57c6f627be75bc0acd50ff1b71315839ec3a8363/integrity-and-anticorruption>Integrity and anticorruption</a></h5>
+								<h5><a href="https://github.com/Yuylam/semester-1/tree/57c6f627be75bc0acd50ff1b71315839ec3a8363/integrity-and-anticorruption">Integrity and anticorruption</a></h5>
 								<p>With the discussions on integrity I get to understand the importance of integrity. We should never ever 
 								do things that violates integrity even though it would bring benefit to us.</p>
 							</article>
